# primo

./: CHANGELOG.md  Cargo.toml  README.md  search-index.js
primo/: fn.sort_vec.html  index.html  sidebar-items.js  sort_vec.v.html
src/: main.rs  primo.rs
src/primo/: primo.rs.html
