[package]
name = "primo"
version = "0.0.1"
authors = ["Baptiste Fontaine <b@ptistefontaine.fr>"]
description = "Sort a file, correctly handling multi-digits numbers"
homepage = "https://github.com/bfontaine/primo"
repository = "https://github.com/bfontaine/primo.git"
keywords = ["sort", "numbers"]
categories = ["text-processing", "command-line-utilities"]
license = "MIT"

[dependencies]
clap = "~2.19.0"
unicode-segmentation = "1.1.0"

[lib]
name = "primo"
path = "src/primo.rs"

[[bin]]
name = "primo"
path = "src/main.rs"
doc = false
